objects/PEPE_Budget_Management__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Ammount__c</fullName>
        <label>Budget Ammount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Available__c</fullName>
        <description>Allocation Budget Amount</description>
        <label>Budget Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Consumed__c</fullName>
        <description>Total Consumed Budget</description>
        <label>Budget Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Id__c</fullName>
        <displayFormat>BID-{0000000000}</displayFormat>
        <label>Budget Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisioned</fullName>
                    <default>true</default>
                    <label>Provisioned</label>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Exhausted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Cluster__c</fullName>
        <label>Country Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theatre_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFRICA_OP</fullName>
                </value>
                <value>
                    <fullName>BELUX_OPS</fullName>
                </value>
                <value>
                    <fullName>DENMARK_OPS</fullName>
                </value>
                <value>
                    <fullName>EMEA-CEE</fullName>
                </value>
                <value>
                    <fullName>EMEA-FRANCE</fullName>
                </value>
                <value>
                    <fullName>EMEA-GERMANY</fullName>
                </value>
                <value>
                    <fullName>EMEA-ITALY</fullName>
                </value>
                <value>
                    <fullName>EMEA-POLAND</fullName>
                </value>
                <value>
                    <fullName>EMEA-SEE</fullName>
                </value>
                <value>
                    <fullName>EMEA-SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>EMEA-UKI</fullName>
                </value>
                <value>
                    <fullName>FINLAND_OPS</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>MIDDLE_EAST</fullName>
                </value>
                <value>
                    <fullName>NETHERLANDS_OPS</fullName>
                </value>
                <value>
                    <fullName>NORWAY_OPS</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>RUSSIA_CIS</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>EMEA-KSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Cluster__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo, D.R.</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Congo Dem</fullName>
                </value>
                <value>
                    <fullName>Cote d'Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY13</fullName>
                </value>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PVT</fullName>
                </value>
                <value>
                    <fullName>PIW</fullName>
                </value>
                <value>
                    <fullName>Architechture</fullName>
                </value>
                <value>
                    <fullName>P+</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theatre_Region__c</fullName>
        <label>Theatre Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>UK&amp;I</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Budget allocated and budget consumed is shown in the Training Request tab to the Regional lead</description>
    <label>Budget Management</label>
    <nameField>
        <label>Bucket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>